# src/models/user.js
@@ -66,26 +66,6 @@ class User extends ModelComponent{
             throw err;
         }
     }
-
-    async cancelWithdraw(){
-        const { app } = this.self.params;
-        try{
-            /* Close Mutex */
-            await AppRepository.prototype.changeWithdrawPosition(app, true);
-            // Output = Boolean
-            let res = await this.process('CancelWithdraw');
-            /* Open Mutex */
-            await AppRepository.prototype.changeWithdrawPosition(app, false);
-            return res;
-        }catch(err){
-            if(parseInt(err.code) != 14){
-                /* If not withdrawing atm */
-                /* Open Mutex */
-                await AppRepository.prototype.changeWithdrawPosition(app, false);
-            }
-            throw err;
-        }
-    }
     
     async getDepositAddress() {
         const { app } = this.self.params;
